ajout de la possibilité d'assigner des comptables pour chaque guilde. Correction de certaines interfaces

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -142,6 +142,13 @@
                   <li>
                     <a href="{{ path('app_profile') }}" class="block w-full rounded-lg px-4 py-2 bg-BLACK/60 text-WHITE hover:bg-VIOLET border border-transparent hover:border-PINK transition">Profil</a>
                   </li>
+                  
+                  <li>
+                    <a href="{{ path('shop_index') }}" class="block w-full rounded-lg px-4 py-2 bg-BLACK/60 text-WHITE hover:bg-VIOLET border border-transparent hover:border-PINK transition">Boutique</a>
+                  </li>
+                  <li>
+                    <a href="{{ path('shop_comparateur') }}" class="block w-full rounded-lg px-4 py-2 bg-BLACK/60 text-WHITE hover:bg-VIOLET border border-transparent hover:border-PINK transition">Comparateur de prix</a>
+                  </li>
                   <li>
                     <a href="{{ path('app_messages_index') }}" class="block w-full rounded-lg px-4 py-2 bg-BLACK/60 text-WHITE hover:bg-VIOLET border border-transparent hover:border-PINK transition">
                       Messagerie
@@ -151,9 +158,6 @@
                         </span>
                       {% endif %}
                     </a>
-                  </li>
-                  <li>
-                    <a href="{{ path('shop_index') }}" class="block w-full rounded-lg px-4 py-2 bg-BLACK/60 text-WHITE hover:bg-VIOLET border border-transparent hover:border-PINK transition">Voir les Items</a>
                   </li>
                   <li>
                     <a href="{{ path('app_contact') }}" class="block w-full rounded-lg px-4 py-2 bg-BLACK/60 text-WHITE hover:bg-VIOLET border border-transparent">Nous contacter</a>
