--- a/market-ajh/templates/compta/index.html.twig
+++ b/market-ajh/templates/compta/index.html.twig
@@ -13,12 +13,12 @@
                 <div class="flex flex-col items-center w-48">
                 <label for="user" class="block text-sm font-medium text-WHITE mb-1 text-center">Utilisateur :</label>
                 <input type="text" name="user" id="user" placeholder="Nom ou ID utilisateur" value="{{ filter_user|default('') }}"
-                class="border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
+                class="border border-gray-300 bg-WHITE rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
                 </div>
                 <div class="flex flex-col items-center w-48">
                 <label for="guilde" class="block text-sm font-medium text-WHITE mb-1 text-center">Guilde :</label>
                 <input type="text" name="guilde" id="guilde" placeholder="Nom ou ID guilde" value="{{ filter_guilde|default('') }}"
-                class="border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
+                class="border border-gray-300 bg-WHITE rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
                 </div>
                 <div class="flex flex-col items-center w-48">
                 <label for="statut" class="block text-sm font-medium text-WHITE mb-1 text-center">Statut :</label>
@@ -97,11 +97,11 @@
                 <div class="flex flex-col items-center w-48">
                 <label for="user" class="block text-sm font-medium text-WHITE mb-1 text-center">Utilisateur :</label>
                 <input type="text" name="user" id="user" placeholder="Nom ou ID utilisateur" value="{{ filter_user|default('') }}"
-                class="border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
+                class="border border-gray-300 rounded bg-WHITE px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
                 </div>
                 <div class="flex flex-col items-center w-48">
                 <label for="statut" class="block text-sm font-medium text-WHITE mb-1 text-center">Statut :</label>
-                <select name="statut" id="statut" class="border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
+                <select name="statut" id="statut" class="border border-gray-300 rounded bg-WHITE px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400 w-full text-center">
                     <option value="Tous">Tous</option>
                     <option value="En attente">En attente</option>
                     <option value="En attente de livraison" >En attente de livraison</option>
