--- a/market-ajh/templates/order/index.html.twig
+++ b/market-ajh/templates/order/index.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <div class="container mx-auto p-6 flex flex-col items-center">
         <h1 class="text-3xl font-bold mb-6 text-center">Commandes</h1>
-
+        <p class="text-gray-500 text-center mb-4">
+            Pour marquer une commande comme avortée, veuillez utiliser le <a href="{{ path('app_contact') }}" class="text-VIOLET underline">formulaire de contact</a>.
+        </p>
         {# === Formulaire de filtres === #}
         <form method="get" class="mb-8 flex flex-wrap gap-4 items-end justify-center">
             <div class="w-60">
