--- a/market-ajh/templates/other/contact.html.twig
+++ b/market-ajh/templates/other/contact.html.twig
@@ -14,13 +14,13 @@
             <div>
                 <label for="subject" class="block text-sm font-medium text-WHITE">Sujet</label>
                 <input type="text" id="subject" name="subject" required
-                       class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+                       class="mt-1 block w-full px-3 bg-WHITE py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
             </div>
             
             <div>
                 <label for="message" class="block text-sm font-medium text-WHITE">Message</label>
                 <textarea id="message" name="message" rows="4" required
-                          class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></textarea>
+                          class="mt-1 block w-full px-3 bg-WHITE py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></textarea>
             </div>
             
             <div>
